--- a/src/Components/Nav.css
+++ b/src/Components/Nav.css
@@ -35,5 +35,7 @@
     position: fixed;
     right: 20px;
     width: 30px;
-    object-fit: contain;
+    object-fit: cover;
+    border-radius: 50%;
+    border: #111 solid 2px;
 }
