--- a/src/Components/Banner.css
+++ b/src/Components/Banner.css
@@ -61,3 +61,19 @@
     background-color: #e6e6e6;
     transition: all 0.3s;
 }
+
+@media only screen and (max-width: 400px) {
+    .banner__title{
+        font-size: 20px;
+    }
+    .banner__button{
+        font-size: x-small;
+    }
+    .banner__description{
+        font-size: xx-small;
+        width: 80%;
+    }
+    .banner{
+        height: 300px;
+    }
+  }
