--- a/src/Components/LoginScreen.css
+++ b/src/Components/LoginScreen.css
@@ -1,8 +1,9 @@
 .loginScreen{
     position: relative;
-    height: 100%;
+    height: 100vh;
     background:url("https://assets.nflxext.com/ffe/siteui/vlv3/0ef67cc5-0aa7-47cf-87bd-7f595afc7cfb/c96f2a1d-1627-40aa-a29e-6ab6b27b35ab/IN-en-20221107-popsignuptwoweeks-perspective_alpha_website_large.jpg") center no-repeat;
     background-size: cover;
+    overflow-y: hidden;
 }
 
 .loginScreen__logo{
@@ -28,6 +29,7 @@
 
 .loginScreen__gradient{
     width: 100%;
+    z-index: 1;
     height: 100vh;
     background-color: rgb(0, 0, 0, 0.4);
     background-image: linear-gradient(
@@ -40,11 +42,14 @@
 
 .loginScreen__body{
     position: absolute;
+    z-index: 1;
     color: #fff;
     padding: 20px;
     top: 30%;
-    margin-right: auto;
+    left: 0;
+    right:0;
     margin-left: auto;
+    margin-right: auto;
     text-align: center;
 }
 
@@ -64,13 +69,23 @@
     font-weight: 400;
 }
 
+.loginScreen__input {
+    margin: 20px;
+}
+
+.loginScreen__input > form{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .loginScreen__input > form > input{
     padding: 10px;
     outline-width: 0;
     height: 30px;
     width: 30%;
     border: none;
-    max-width: 600px; /* for 4k screens */
+    max-width: 600px; /* for 4k screens/ huge screens */
 }
 
 .loginScreen__input > form > button{
@@ -79,4 +94,7 @@
     color: #fff;
     background-color: #e50914;
     border: none;
+    font-weight: 600;
+    cursor: pointer;
+    text-transform: uppercase;
 }
